<resources>
    <string name="app_name">Jira Estimator</string>
    <string name="title_activity_login">Jira Estimator - Login</string>

    <!-- Login Activity-->
    <string name="prompt_url">Jira URL</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Token</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_url">Not a valid Jira Cloud URL</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_token">Token / password must be entered</string>
    <string name="login_api_error_message">An error occurred please check all entries are valid and Jira Cloud is not down</string>

    <!-- Project Activity -->
    <string name="project_name">Project Name</string>

    <!-- Issue Activities -->
    <string name="title_issue_list">Issues</string>
...
